syntax = "proto3";

package book;

enum Genre{
    GENRE_UNSPECIFIED = 0;
    GENRE_FANTASY = 1;
    GENRE_DYSTOPIAN = 2;
    GENRE_ADVENTURE = 3;
}

message Book{
    string id = 1;
    string title = 2;
    string author = 3;
    Genre genre = 4;
    int32 publishYear = 5;
}